<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SortingActivity"
        android:background="@color/colorWhite">
    <Switch
            android:text="@string/add_date_constraint"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="click"

            android:layout_height="wrap_content" android:id="@+id/dateSwitchID"
    />

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_below="@id/dateSwitchID"
                    android:id="@+id/layout_date"
            android:orientation="horizontal"
            android:visibility="invisible"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp">

        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/relative_lay_date" android:layout_weight="1">


            <ImageButton
                    android:layout_width="25dp"
                    android:layout_marginTop="25dp"
                    app:srcCompat="@drawable/plus"
                    android:onClick="click"
                    android:background="@color/colorWhite"
                    android:scaleType="fitXY"
                    android:layout_toEndOf="@id/minDateTV"
                    android:contentDescription="@string/adddatebutton"
                    android:layout_height="25dp"
                    android:id="@+id/minDateBtn"/>


            <ImageButton
                    android:layout_width="25dp"
                    app:srcCompat="@drawable/plus"
                    android:layout_toEndOf="@id/maxDateTV"
                    android:background="@color/colorWhite"
                    android:onClick="click"
                    android:layout_below="@+id/minDateBtn"
                    android:scaleType="fitXY"
                    android:layout_height="25dp"
                    android:contentDescription="@string/adddatebutton"
                    android:id="@+id/maxDateBtn" android:layout_marginTop="53dp"/>


            <TextView
                    android:text="@string/min_date"
                    android:layout_width="85dp"
                    android:textSize="17sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorBlack"

                    android:layout_height="wrap_content" android:id="@+id/minDateTV" android:layout_marginTop="27dp"
            />
            <TextView
                    android:text="@string/max_date"
                    android:layout_below="@id/minDateTV"
                    android:textColor="@color/colorBlack"
                    android:layout_centerHorizontal="true"
                    android:layout_width="85dp"
                    android:textSize="17sp"
                    android:layout_height="41dp" android:id="@+id/maxDateTV" android:layout_marginTop="53dp"
            />
        </RelativeLayout>

        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_toEndOf="@id/relative_lay_date"
        android:layout_centerVertical="true" android:layout_weight="1">


            <android.support.design.widget.TextInputEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/min_cost"
                    android:ems="6"
                    android:textSize="17sp"
                    android:inputType="numberDecimal"
                    android:layout_marginTop="24dp"
                    android:id="@+id/minCost"/>

            <android.support.design.widget.TextInputEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_cost"
                    android:ems="6"
                    android:textSize="17sp"
                    android:inputType="numberDecimal"
                    android:id="@+id/maxCost"
            android:layout_below="@id/minCost"
            android:layout_marginTop="25dp"/>
        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_below="@id/dateSwitchID"
                    android:id="@+id/animatedLayout"
    android:layout_centerHorizontal="true">

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:id="@+id/groupID">
            <RadioButton
                    android:text="@string/date_newest_to_oldest"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_gravity="start"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" android:id="@+id/rb1" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/date_oldest_to_newest"
                    android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" android:id="@+id/rb2" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/price_highest_to_lowest"
                    android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" android:id="@+id/rb3" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/price_lowest_to_highest"
                    android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" android:id="@+id/rb4" android:layout_weight="1"/>
        </RadioGroup>

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_centerHorizontal="true"
        android:id="@+id/buttonlayout" android:orientation="horizontal" android:layout_below="@+id/groupID">

            <Button
                    android:id="@+id/applyBtn"
                    android:layout_width="130dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_drawable"
                    android:text="@string/apply"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:onClick="click"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"/>

            <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="130dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_reset"
                    android:text="@string/reset"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:onClick="click"
                    android:layout_marginTop="30dp"
                    />
        </LinearLayout>


        <TextView
                android:id="@+id/cancelPref"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/buttonlayout"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_centerHorizontal="true"
                android:onClick="click"
                android:focusable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/colorTextView"
                android:textSize="15sp" android:layout_marginTop="0dp" android:layout_marginBottom="69dp"/>

    </RelativeLayout>

</RelativeLayout>