<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".AddEntry" android:orientation="vertical">

    <ProgressBar
            android:id="@+id/loadingProgressBarAE"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="-6dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"
            android:theme="@style/ProgressBarStyle" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="center"
            android:id="@+id/layoutContent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

        <ImageButton
                android:layout_marginTop="24dp"
                android:layout_width="85dp"
                android:onClick="click"
                android:background="@color/colorWhite"
                android:layout_height="85dp" app:srcCompat="@drawable/camera" android:id="@+id/imageButton"
                android:scaleType="fitXY" android:contentDescription="@string/camerabutton"/>

        <android.support.design.widget.TextInputEditText
                android:id="@+id/locationEV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="textEmailSubject"
                android:layout_marginTop="24dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorActionBar"
                android:textSize="15sp"/>

        <android.support.design.widget.TextInputEditText
                android:id="@+id/priceEV"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorActionBar"
                android:textSize="15sp"/>

        <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                      android:orientation="horizontal"
                                                      android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/dateEV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:editable="false"
                    android:hint="@string/date"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorActionBar"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

            <ImageButton
                    android:layout_width="25dp"
                    android:layout_marginTop="5dp"
                    android:onClick="click"
                    android:background="@color/colorWhite"
                    android:layout_height="25dp" app:srcCompat="@drawable/plus" android:id="@+id/imageButton2"
                    android:scaleType="fitXY"
                    android:layout_gravity="center" android:contentDescription="@string/adddatebutton"/>


        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.design.widget.TextInputEditText
                android:id="@+id/contentEV"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="0dp"
                android:gravity="top"
                android:hint="@string/contentDesc"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorActionBar"
                android:layout_weight="1"
                android:textSize="15sp"/>

    </LinearLayout>

    <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="click"
            android:background="@drawable/button_drawable"
            android:text="@string/add_entry"
            android:textAllCaps="false"
            android:layout_marginTop="13dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


    <TextView
            android:id="@+id/cancelTV"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="click"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorTextView"
            android:textSize="15sp" android:layout_marginTop="0dp" android:layout_marginBottom="69dp"/>

</LinearLayout>