<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                tools:context=".MainActivity">

    <ImageView
            android:id="@+id/starzIconView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/starz2" />

    <TextView
            android:id="@+id/bookITextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starzIconView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/booki"
            android:textColor="@color/colorSplashText"
            android:textSize="16sp" />

    <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-6dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"
            android:theme="@style/ProgressBarStyle" />

    <RelativeLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:visibility="gone">

        <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/colorBackground"
                android:textSize="25sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/loginUseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WelcomeTextView"
                android:layout_marginTop="10dp"
                android:text="@string/loginMessage"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/loginButton"
                android:layout_below="@+id/loginUseTextView"
                android:layout_marginTop="-64dp"
                android:gravity="center"
                android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp" />

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp" />

        </LinearLayout>

        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_above="@+id/signUpTextView"
                android:layout_marginBottom="5dp"
                android:onClick="login"
                android:background="@drawable/button_drawable"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="signUp"
                android:focusable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorTextView"
                android:textSize="15sp" />


    </RelativeLayout>

</RelativeLayout>